--- a/clients.html
+++ b/clients.html
@@ -2,199 +2,201 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <title>Solarion.Media — Контакты</title>
+  <title>Solarion.Media — AI & Digital Studio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- GOOGLE FONT -->
+  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
-  <!-- GOOGLE ANALYTICS -->
+  <!-- GA4 -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-517112874"></script>
   <script>
-    if (typeof window !== "undefined") {
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-517112874');
-    }
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-517112874');
   </script>
 
   <style>
     :root {
-      --bg: #0b0b0f;
-      --card: #16161d;
-      --text: #ffffff;
-      --muted: #9a9aab;
-      --glow: rgba(114,144,255,.35);
+      --bg:#0b0d12;
+      --card:#161922;
+      --accent:#7aa2ff;
+      --text:#ffffff;
+      --muted:#b5b8c5;
+      --glow:rgba(122,162,255,.35);
     }
 
-    * { margin:0; padding:0; box-sizing:border-box; font-family:'Inter',sans-serif; }
+    *{box-sizing:border-box;margin:0;padding:0;font-family:'Inter',sans-serif}
+    body{background:radial-gradient(circle at top,#1b1f2e,var(--bg));color:var(--text)}
 
-    body {
-      min-height:100vh;
-      background:radial-gradient(circle at top, #1b1b2f, var(--bg));
-      display:flex; justify-content:center; align-items:center; color:var(--text);
-      overflow-x:hidden;
-    }
+    header{text-align:center;padding:80px 20px}
+    header h1{font-size:3em;color:var(--accent)}
+    header p{font-size:1.25em;color:var(--muted);margin-top:10px}
 
-    .card {
+    section{max-width:1100px;margin:auto;padding:70px 20px}
+
+    h2{text-align:center;font-size:2.2em;margin-bottom:20px;color:var(--accent)}
+    .subtitle{text-align:center;color:var(--muted);margin-bottom:50px}
+
+    /* Cards */
+    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:24px}
+    .card{
       background:var(--card);
-      padding:36px;
-      border-radius:24px;
-      width:100%;
-      max-width:440px;
-      box-shadow:0 0 0 1px rgba(255,255,255,.05),0 30px 60px rgba(0,0,0,.6),0 0 50px var(--glow);
-      animation:fadeUp 0.6s ease;
+      padding:28px;
+      border-radius:20px;
+      box-shadow:0 20px 50px rgba(0,0,0,.55);
+      transition:.35s;
+      position:relative;
     }
-
-    @keyframes fadeUp {
-      from { opacity:0; transform:translateY(30px); }
-      to { opacity:1; transform:translateY(0); }
+    .card:hover{
+      transform:translateY(-10px) scale(1.02);
+      box-shadow:0 30px 80px var(--glow);
     }
+    .card h3{color:var(--accent);margin-bottom:12px}
+    .card p{color:var(--muted);margin-bottom:12px}
 
-    h1 { text-align:center; font-size:30px; margin-bottom:8px; }
-    p { text-align:center; color:var(--muted); margin-bottom:28px; font-size:16px; }
+    /* Price */
+    .price{font-size:1.8em;font-weight:700;margin:18px 0}
 
-    .buttons { display:flex; flex-direction:column; gap:16px; }
-    .btn {
-      padding:16px;
-      border-radius:18px;
-      text-align:center;
-      font-weight:600;
+    /* Buttons */
+    .btn{
+      display:inline-block;
+      margin-top:10px;
+      padding:14px 26px;
+      border-radius:14px;
+      background:linear-gradient(135deg,#7aa2ff,#4d6fff);
       color:#fff;
       text-decoration:none;
-      transition:.3s;
-      box-shadow:0 6px 20px rgba(0,0,0,.35);
-      position:relative;
-      overflow:hidden;
+      font-weight:600;
+      transition:.25s;
+      box-shadow:0 10px 30px rgba(0,0,0,.5);
+    }
+    .btn:hover{
+      transform:scale(1.08);
+      box-shadow:0 0 35px var(--glow);
     }
 
-    /* glow и подпрыгивание */
-    @keyframes jumpGlow {
-      0% { transform: translateY(0); box-shadow:0 6px 20px rgba(0,0,0,.35); }
-      50% { transform: translateY(-6px); box-shadow:0 12px 30px rgba(0,0,0,.5); }
-      100% { transform: translateY(0); box-shadow:0 6px 20px rgba(0,0,0,.35); }
-    }
-
-    .btn::after {
-      content:"";
-      position:absolute;
-      top:0; left:0; width:100%; height:100%;
-      background:var(--glow);
-      opacity:0;
-      transition:.4s;
-      border-radius:inherit;
-      pointer-events:none;
-    }
-
-    .btn:hover::after { opacity:0.25; }
-    .btn:hover { animation: jumpGlow 0.4s ease forwards; filter: brightness(1.2); }
-    .btn:active { transform:scale(.95); opacity:.85; }
-
-    .telegram { background:linear-gradient(135deg,#229ED9,#1b7db3); }
-    .whatsapp { background:linear-gradient(135deg,#25D366,#1ea855); }
-    .viber { background:linear-gradient(135deg,#7360F2,#5a46d6); }
-    .email { background:linear-gradient(135deg,#555,#333); }
-
-    footer { text-align:center; font-size:13px; color:var(--muted); margin-top:24px; }
-
-    /* POPUP */
-    .popup {
-      position:fixed;
-      inset:0;
-      background:rgba(0,0,0,0.7);
+    /* Contact buttons */
+    .contacts{
       display:flex;
       justify-content:center;
-      align-items:center;
-      opacity:0;
-      pointer-events:none;
-      transition:opacity .4s;
+      flex-wrap:wrap;
+      gap:16px;
+      margin-top:30px;
     }
-    .popup.active { opacity:1; pointer-events:auto; }
+    .tg{background:linear-gradient(135deg,#229ED9,#1b7db3)}
+    .wa{background:linear-gradient(135deg,#25D366,#1ea855)}
+    .vb{background:linear-gradient(135deg,#7360F2,#5a46d6)}
+    .mail{background:linear-gradient(135deg,#555,#333)}
 
-    .popup-content {
-      background:var(--card);
-      padding:32px;
-      border-radius:20px;
-      width:90%;
-      max-width:380px;
-      box-shadow:0 20px 60px rgba(0,0,0,.6);
-      transform:scale(0.8);
-      transition:transform .4s;
-    }
-    .popup.active .popup-content { transform:scale(1); }
-
-    .popup-content input,
-    .popup-content textarea {
-      width:100%;
-      margin-bottom:14px;
-      padding:14px;
-      border-radius:12px;
-      border:none;
-      outline:none;
-      background:#1e1e2b;
-      color:#fff;
-      font-size:15px;
+    footer{
+      text-align:center;
+      padding:30px;
+      background:#141722;
+      color:var(--muted);
+      font-size:14px;
     }
 
-    .popup-content button {
-      width:100%;
-      padding:14px;
-      border-radius:12px;
-      border:none;
-      font-weight:600;
-      background:linear-gradient(135deg,#555,#333);
-      color:#fff;
-      cursor:pointer;
-      transition:.3s;
+    @media(max-width:600px){
+      header h1{font-size:2.3em}
     }
-    .popup-content button:hover { transform:scale(1.05); filter:brightness(1.15); }
-    .popup-content button:active { transform:scale(.95); }
   </style>
 </head>
 
 <body>
 
-  <div class="card">
-    <h1>Solarion.Media</h1>
-    <p>Связь • Сотрудничество • Партнёрство</p>
+<header>
+  <h1>Solarion.Media</h1>
+  <p>AI-студия для роста бизнеса, контента и автоматизации</p>
+</header>
 
-    <div class="buttons">
-      <a class="btn telegram" href="https://t.me/solarion" target="_blank">Telegram</a>
-      <a class="btn whatsapp" href="https://wa.me/375296909200" target="_blank">WhatsApp</a>
-      <a class="btn viber" href="viber://chat?number=375296909200">Viber</a>
-      <a class="btn email" href="#" id="popupBtn">Оставить заявку</a>
+<section>
+  <h2>Что мы делаем</h2>
+  <p class="subtitle">Без хайпа. Без лишних инструментов. Только системы, которые работают.</p>
+
+  <div class="grid">
+    <div class="card">
+      <h3>AI-контент</h3>
+      <p>Тексты, сценарии, офферы, контент-системы под рост.</p>
+    </div>
+    <div class="card">
+      <h3>AI-маркетинг</h3>
+      <p>Упаковка, воронки, реклама, аналитика и масштабирование.</p>
+    </div>
+    <div class="card">
+      <h3>AI-автоматизация</h3>
+      <p>Заявки, коммуникации, процессы, экономия времени.</p>
+    </div>
+  </div>
+</section>
+
+<section>
+  <h2>Тарифы</h2>
+  <p class="subtitle">Средний рынок Беларуси • прозрачные цены</p>
+
+  <div class="grid">
+    <div class="card">
+      <h3>Starter</h3>
+      <div class="price">900 BYN</div>
+      <p>Анализ бизнеса, стратегия, контент-пак.</p>
+      <p>Подходит для быстрого старта.</p>
+      <a class="btn mail" href="mailto:solarionmedia@gmail.com?subject=Starter">Выбрать</a>
     </div>
 
-    <footer>© 2025 Solarion.Media</footer>
-  </div>
+    <div class="card">
+      <h3>Growth</h3>
+      <div class="price">2 500 BYN</div>
+      <p>Starter + продвижение, SMM, базовая автоматизация.</p>
+      <p>Рост заявок и системность.</p>
+      <a class="btn mail" href="mailto:solarionmedia@gmail.com?subject=Growth">Выбрать</a>
+    </div>
 
-  <div class="popup" id="popup">
-    <div class="popup-content">
-      <h3 style="margin-bottom:12px; text-align:center;">Заявка</h3>
-      <form action="https://formspree.io/f/dc3459c3c7d84a90a5b95ca13dda63fe" method="POST">
-        <input type="email" name="email" placeholder="Ваш email" required />
-        <textarea name="message" placeholder="Сообщение" required></textarea>
-        <button type="submit">Отправить</button>
-      </form>
+    <div class="card">
+      <h3>Premium</h3>
+      <div class="price">5 000 BYN</div>
+      <p>Полный digital-пак + AI-системы.</p>
+      <p>Работа по KPI и аналитике.</p>
+      <a class="btn mail" href="mailto:solarionmedia@gmail.com?subject=Premium">Выбрать</a>
     </div>
   </div>
+</section>
 
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const popup = document.getElementById('popup');
-      const btn = document.getElementById('popupBtn');
+<section>
+  <h2>Примеры задач (кейсы)</h2>
+  <p class="subtitle">Типовые сценарии, с которыми к нам приходят</p>
 
-      btn.addEventListener('click', e => {
-        e.preventDefault();
-        popup.classList.add('active');
-      });
+  <div class="grid">
+    <div class="card">
+      <h3>B2B-компания</h3>
+      <p>Автоматизация заявок и коммуникаций → меньше ручной работы.</p>
+    </div>
+    <div class="card">
+      <h3>Эксперт / блогер</h3>
+      <p>Контент-система + упаковка → рост аудитории.</p>
+    </div>
+    <div class="card">
+      <h3>Малый бизнес</h3>
+      <p>AI-маркетинг + реклама → стабильные лиды.</p>
+    </div>
+  </div>
+</section>
 
-      popup.addEventListener('click', e => {
-        if (e.target === popup) popup.classList.remove('active');
-      });
-    });
-  </script>
+<section>
+  <h2>Связь</h2>
+  <p class="subtitle">Отвечаем быстро. Без ботов.</p>
+
+  <div class="contacts">
+    <a class="btn tg" href="https://t.me/SolarionMedia" target="_blank">Telegram</a>
+    <a class="btn wa" href="https://wa.me/375296909200" target="_blank">WhatsApp</a>
+    <a class="btn vb" href="viber://chat?number=375296909200">Viber</a>
+    <a class="btn mail" href="mailto:solarionmedia@gmail.com">Email</a>
+  </div>
+</section>
+
+<footer>
+  © 2025 Solarion.Media — AI & Digital Studio
+</footer>
 
 </body>
 </html>
