--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <title>Solarion.Media — AI & Digital Studio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Solarion.Media — AI-студия роста бизнеса</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-
-  <!-- GA4 -->
+  <!-- GOOGLE ANALYTICS -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-517112874"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -18,88 +15,150 @@
   </script>
 
   <style>
-    :root {
-      --bg:#0b0d12;
-      --card:#161922;
+    :root{
+      --bg:#0b0b0f;
+      --card:#16161d;
       --accent:#7aa2ff;
       --text:#ffffff;
-      --muted:#b5b8c5;
-      --glow:rgba(122,162,255,.35);
+      --muted:#9a9aab;
     }
 
-    *{box-sizing:border-box;margin:0;padding:0;font-family:'Inter',sans-serif}
-    body{background:radial-gradient(circle at top,#1b1f2e,var(--bg));color:var(--text)}
+    *{box-sizing:border-box;margin:0;padding:0;font-family:Inter,Arial,sans-serif;}
 
-    header{text-align:center;padding:80px 20px}
-    header h1{font-size:3em;color:var(--accent)}
-    header p{font-size:1.25em;color:var(--muted);margin-top:10px}
+    body{
+      background:radial-gradient(circle at top,#1b1b2f,var(--bg));
+      color:var(--text);
+      line-height:1.6;
+    }
 
-    section{max-width:1100px;margin:auto;padding:70px 20px}
+    header,footer{
+      text-align:center;
+      padding:50px 20px;
+    }
 
-    h2{text-align:center;font-size:2.2em;margin-bottom:20px;color:var(--accent)}
-    .subtitle{text-align:center;color:var(--muted);margin-bottom:50px}
+    header h1{
+      font-size:38px;
+      margin-bottom:10px;
+    }
 
-    /* Cards */
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:24px}
+    header p{
+      color:var(--muted);
+      max-width:700px;
+      margin:0 auto;
+    }
+
+    section{
+      max-width:1100px;
+      margin:0 auto;
+      padding:60px 20px;
+    }
+
+    h2{
+      text-align:center;
+      font-size:32px;
+      margin-bottom:20px;
+    }
+
+    .sub{
+      text-align:center;
+      color:var(--muted);
+      max-width:720px;
+      margin:0 auto 50px;
+    }
+
+    .cards{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+      gap:30px;
+    }
+
     .card{
-      background:var(--card);
-      padding:28px;
-      border-radius:20px;
-      box-shadow:0 20px 50px rgba(0,0,0,.55);
-      transition:.35s;
-      position:relative;
+      background:linear-gradient(145deg,#1b1e26,#0f1115);
+      border-radius:22px;
+      padding:32px;
+      box-shadow:0 20px 50px rgba(0,0,0,.6);
+      transition:.3s;
     }
+
     .card:hover{
-      transform:translateY(-10px) scale(1.02);
-      box-shadow:0 30px 80px var(--glow);
+      transform:translateY(-10px);
+      box-shadow:0 30px 70px rgba(0,0,0,.8);
     }
-    .card h3{color:var(--accent);margin-bottom:12px}
-    .card p{color:var(--muted);margin-bottom:12px}
 
-    /* Price */
-    .price{font-size:1.8em;font-weight:700;margin:18px 0}
+    .card h3{
+      font-size:24px;
+      margin-bottom:10px;
+      color:var(--accent);
+    }
 
-    /* Buttons */
+    .price{
+      font-size:30px;
+      margin:20px 0;
+    }
+
+    .card ul{
+      list-style:none;
+      margin-bottom:25px;
+    }
+
+    .card li{
+      margin-bottom:10px;
+      color:#cfcfcf;
+    }
+
     .btn{
-      display:inline-block;
-      margin-top:10px;
-      padding:14px 26px;
+      display:block;
+      text-align:center;
+      padding:14px;
       border-radius:14px;
-      background:linear-gradient(135deg,#7aa2ff,#4d6fff);
+      background:linear-gradient(135deg,#7aa2ff,#5a7cff);
       color:#fff;
       text-decoration:none;
       font-weight:600;
       transition:.25s;
-      box-shadow:0 10px 30px rgba(0,0,0,.5);
-    }
-    .btn:hover{
-      transform:scale(1.08);
-      box-shadow:0 0 35px var(--glow);
     }
 
-    /* Contact buttons */
-    .contacts{
-      display:flex;
-      justify-content:center;
-      flex-wrap:wrap;
-      gap:16px;
-      margin-top:30px;
-    }
-    .tg{background:linear-gradient(135deg,#229ED9,#1b7db3)}
-    .wa{background:linear-gradient(135deg,#25D366,#1ea855)}
-    .vb{background:linear-gradient(135deg,#7360F2,#5a46d6)}
-    .mail{background:linear-gradient(135deg,#555,#333)}
+    .btn:hover{transform:scale(1.05);}
 
-    footer{
+    .note{
       text-align:center;
-      padding:30px;
-      background:#141722;
+      margin-top:40px;
       color:var(--muted);
       font-size:14px;
     }
 
-    @media(max-width:600px){
-      header h1{font-size:2.3em}
+    footer{
+      color:var(--muted);
+      font-size:14px;
+    }
+
+    /* POPUP */
+    .popup{
+      position:fixed;
+      inset:0;
+      background:rgba(0,0,0,.7);
+      display:none;
+      justify-content:center;
+      align-items:center;
+    }
+
+    .popup.active{display:flex;}
+
+    .popup-content{
+      background:var(--card);
+      padding:30px;
+      border-radius:18px;
+      width:90%;
+      max-width:380px;
+    }
+
+    .popup-content input,
+    .popup-content textarea{
+      width:100%;
+      margin-bottom:12px;
+      padding:12px;
+      border-radius:10px;
+      border:none;
     }
   </style>
 </head>
@@ -108,95 +167,19 @@
 
 <header>
   <h1>Solarion.Media</h1>
-  <p>AI-студия для роста бизнеса, контента и автоматизации</p>
+  <p>AI-студия, которая превращает контент, маркетинг и автоматизацию в поток заявок.</p>
 </header>
 
 <section>
-  <h2>Что мы делаем</h2>
-  <p class="subtitle">Без хайпа. Без лишних инструментов. Только системы, которые работают.</p>
+  <h2>Тарифы и решения</h2>
+  <p class="sub">
+    Прозрачные цены. Понятный результат.  
+    Мы не продаём часы — мы выстраиваем систему роста.
+  </p>
 
-  <div class="grid">
-    <div class="card">
-      <h3>AI-контент</h3>
-      <p>Тексты, сценарии, офферы, контент-системы под рост.</p>
-    </div>
-    <div class="card">
-      <h3>AI-маркетинг</h3>
-      <p>Упаковка, воронки, реклама, аналитика и масштабирование.</p>
-    </div>
-    <div class="card">
-      <h3>AI-автоматизация</h3>
-      <p>Заявки, коммуникации, процессы, экономия времени.</p>
-    </div>
-  </div>
-</section>
-
-<section>
-  <h2>Тарифы</h2>
-  <p class="subtitle">Средний рынок Беларуси • прозрачные цены</p>
-
-  <div class="grid">
-    <div class="card">
-      <h3>Starter</h3>
-      <div class="price">900 BYN</div>
-      <p>Анализ бизнеса, стратегия, контент-пак.</p>
-      <p>Подходит для быстрого старта.</p>
-      <a class="btn mail" href="mailto:solarionmedia@gmail.com?subject=Starter">Выбрать</a>
-    </div>
+  <div class="cards">
 
     <div class="card">
-      <h3>Growth</h3>
-      <div class="price">2 500 BYN</div>
-      <p>Starter + продвижение, SMM, базовая автоматизация.</p>
-      <p>Рост заявок и системность.</p>
-      <a class="btn mail" href="mailto:solarionmedia@gmail.com?subject=Growth">Выбрать</a>
-    </div>
+      <h3>Старт</h3>
+      <div class="
 
-    <div class="card">
-      <h3>Premium</h3>
-      <div class="price">5 000 BYN</div>
-      <p>Полный digital-пак + AI-системы.</p>
-      <p>Работа по KPI и аналитике.</p>
-      <a class="btn mail" href="mailto:solarionmedia@gmail.com?subject=Premium">Выбрать</a>
-    </div>
-  </div>
-</section>
-
-<section>
-  <h2>Примеры задач (кейсы)</h2>
-  <p class="subtitle">Типовые сценарии, с которыми к нам приходят</p>
-
-  <div class="grid">
-    <div class="card">
-      <h3>B2B-компания</h3>
-      <p>Автоматизация заявок и коммуникаций → меньше ручной работы.</p>
-    </div>
-    <div class="card">
-      <h3>Эксперт / блогер</h3>
-      <p>Контент-система + упаковка → рост аудитории.</p>
-    </div>
-    <div class="card">
-      <h3>Малый бизнес</h3>
-      <p>AI-маркетинг + реклама → стабильные лиды.</p>
-    </div>
-  </div>
-</section>
-
-<section>
-  <h2>Связь</h2>
-  <p class="subtitle">Отвечаем быстро. Без ботов.</p>
-
-  <div class="contacts">
-    <a class="btn tg" href="https://t.me/SolarionMedia" target="_blank">Telegram</a>
-    <a class="btn wa" href="https://wa.me/375296909200" target="_blank">WhatsApp</a>
-    <a class="btn vb" href="viber://chat?number=375296909200">Viber</a>
-    <a class="btn mail" href="mailto:solarionmedia@gmail.com">Email</a>
-  </div>
-</section>
-
-<footer>
-  © 2025 Solarion.Media — AI & Digital Studio
-</footer>
-
-</body>
-</html>
